Selenium Grid Automation Framework (Docker + Parallel + Multi-Browser)